# AI-News-System-Backend

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  seed_admin.py  seed_keywords.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_split_counts_columns.py  0003_one_health_schema.py
app/ai/: processor.py
app/api/: admin.py  articles.py  auth.py  dashboard.py  deps.py  keywords.py  router.py
app/collectors/: countries.py  extractor.py  news_collector.py
app/core/: config.py  middleware.py  security.py  seed.py
app/models/: __init__.py  app_setting.py  article.py  keyword.py  user.py
app/repositories/: article_repository.py  base.py  keyword_repository.py  user_repository.py
app/scheduler/: scheduler.py
app/schemas/: article.py  auth.py  dashboard.py  keyword.py
app/services/: article_service.py  auth_service.py  dashboard_service.py  keyword_service.py  settings_store.py
app/utils/: hashing.py  logging.py
tests/: conftest.py  test_hashing.py  test_keywords_api.py  test_security.py
