[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "apscheduler==3.10.4",
    "asyncpg==0.30.0",
    "fastapi==0.115.5",
    "feedparser==6.0.11",
    "httpx==0.28.1",
    "newspaper4k==0.9.3.1",
    "openai==1.57.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "sqlalchemy[asyncio]==2.0.36",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "trafilatura==2.0.0",
    "uvicorn[standard]==0.32.1",
    "groq==0.13.0",
]
